# autoresearch

./: prepare.py  program.md  pyproject.toml  train.py
.cursor/: general_data.py  task.md
.cursor/Data_Pipeline/: __init__.py  dataset.py  load.py
.cursor/Data_Pipeline/generators/: __init__.py  label_gen.py
.cursor/Data_Pipeline/generators/.ipynb_checkpoints/: label_gen-checkpoint.py
.cursor/Data_Pipeline/preprocessors/: __init__.py  lob_data_process.py  trade_data_process.py
.cursor/Data_Pipeline/preprocessors/.ipynb_checkpoints/: lob_data_process-checkpoint.py  trade_data_process-checkpoint.py
.cursor/Model/: __init__.py
.cursor/Model/backbones/: __init__.py  transformer.py
.cursor/Model/encoders/: __init__.py  base_encoder.py  structured_lob_encoder.py
.cursor/Model/encoders/.ipynb_checkpoints/: lob_encoder-checkpoint.py
.cursor/Model/fusion/: cross_modal_attention.py  event_driven_fusion.py  feature_fusion.py  hierarchical_fusion.py
.cursor/Model/pooling/: __init__.py
Model/: __init__.py  model_config.yaml  multi_modal_transformer.py  revin.py
Model/backbones/: __init__.py  mamba_backbone.py
Model/encoders/: event_trade_encoder.py  hierarchical_encoder.py  sparse_trade_encoder.py  trade_encoder.py
Model/features/: __init__.py  cross_modal_features.py
Model/fusion/: __init__.py
Model/pooling/: temporal_pooling.py
